fixed the button position on mobile

--- a/style.css
+++ b/style.css
@@ -109,8 +109,11 @@ button:hover {
   .container {
     flex-direction: column;
     width: 80%;
-    margin-top: 10px;
+    margin-top: 50px;
     margin-bottom: 35px;
+  }
+  .grid-btn {
+    top: 5px;
   }
   .orange {
     border-top-right-radius: 10px;
